@@ -74,6 +74,12 @@ class RepoSync:
         report_failure = False
         for repo in self.repos:
 
+            env = repo.environment
+
+            for k in env.keys():
+                print _("environment: %s=%s") % (k,env[k])
+                os.putenv(k,env[k])
+
             if name is not None and repo.name != name:
                 # invoked to sync only a specific repo, this is not the one
                 continue
